# Soha-clock

./: gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  packet_engine.cpp
app/src/main/java/com/rasel/blocker/: BootReceiver.kt  FakeLockService.kt  MainActivity.kt
app/src/main/java/com/rasel/blocker/adblock/: AdBlockVpnService.kt  FilterManager.kt  NativeEngine.kt  TcpRstInjector.kt
app/src/main/java/com/rasel/blocker/adblock/https/: CaInstallActivity.kt  CaManager.kt  HttpsInterceptor.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
